# galactic-ionosphere

./: .env.example  .gitignore  DESIGN_DOC.md  README.md  card_context_menu_methods.txt  check_clip_vectors.py  check_embedding_records.py  check_tag_hierarchy.py  check_tasks.py  check_torch.py  check_wd_tags.py  config.json  config.yaml  debug_folders.py  debug_qdrant.py  debug_roots.py  deep_check_vectors.py  fix_indent.py  main.py  non_existent_config.json  pyproject.toml  requirements.txt  session.json  startup_log.txt  tag_tree_lazy_expand.txt  test_pymongo_async.py  verify_env.py  verify_import.py
dev_log/: README.md  album_exclude_filter_fix_plan.md  album_exclude_filter_fixed.md  album_filter_complete_fix.md  album_filters_final_fix.md  album_management_guide.md  depends_on_checklist.md  drag_drop_fix.md  filter_include_exclude_research.md  implementation_summary_count_consistency.md  indexer_pipeline_research_summary.md  journal_session_0.md  journal_session_5e397da4.md  journal_session_7c5ea217.md  journal_session_architectural_audit.md  journal_session_b217e522.md  journal_session_blip_metadata_integration.md  journal_session_clip_faiss_issue.md  journal_session_critical_bugs_fix.md  journal_session_deep_research_and_sync.md  journal_session_e3bd3c05.md  journal_session_indexer_pipeline_research.md  journal_session_maintenance_research.md  journal_session_mongodb_reindex_fix.md  journal_session_periodic_scheduler_implementation.md  journal_session_shutdown_fixes.md  journal_session_systembundle.md  journal_session_tag_dir_album_research.md  summary_2026_01.md  (+11 more)
(+1089 files in other folders)
